--- a/traducir/traductor/package.json
+++ b/traducir/traductor/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2"
   },
